--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,6 @@
                                         <ul class="top_icon">
                                             <li class="login_form"> <a href="login">Login</a> </li>
                                             <li> <a href="/login">Signup</a> </li>
-                                            <li class="mean-last">
-                                             <a href="#"><img src="static/images/search_icon.png" alt="#" /></a>
                                             </li>
                                         </ul>
                         </div>
@@ -81,8 +79,7 @@
                                     <nav class="main-menu">
                                         <ul class="menu-area-main">
                                             <li class="active"> <a href="#game">Game</a> </li>
-                                            <li> <a href="#software">Software</a> </li>
-                                            <li> <a href="#about">About</a> </li>
+                                            <li> <a href="#software">Software</a> </l>
                                             <li> <a href="/add-game">Add Game</a> </li>
                                             <li> <a href="/all-game">All Game</a> </li>
                                         </ul>
