--- a/templates/all-game.html
+++ b/templates/all-game.html
@@ -19,7 +19,7 @@
 <br>
 Цена: {{ i.prices }}
 <br>
-<a href={{ i.link }}>Перейти по ссылке</a> <a href="/delete">Удалить игру</a>
+<a href={{ i.link }}>Перейти по ссылке</a><br> <a href="/delete">Удалить игру</a>
 <br>
 <hr>
 {% endfor %}
