--- a/templates/authorize.html
+++ b/templates/authorize.html
@@ -5,6 +5,7 @@
     <title>Game-Shop</title>
 </head>
 <body>
+<h1>Registrarion</h1>
 Войдите или зарегестрируйтесь <br><br>
 
 <form action="/register" method="post">
